# Lets-Play-Go

./: .gitignore  README.md  play.py  pyproject.toml  requirements.txt
ai/: __init__.py  agent.py  gnugo_agent.py  mcts.py  model.py  puct_agent.py
data/: selfplay.pt
docs/: ENGINE.md  GLOSSARY.md  MCTS.md  MCTS_TESTS.md  RL_BOOTSTRAP.md  TESTS.md
engine/: __init__.py  go_engine.py
gui/: app.py
model/: model_v1.pt  model_v10.pt  model_v11.pt  model_v2.pt  model_v3.pt  model_v4.pt  model_v5.pt  model_v6.pt  model_v7.pt  model_v8.pt
scripts/: benchmark_mcts.py  eval_match.py  generate_selfplay_data.py  run_pipeline.py  train_policy_value.py
tests/: test_engine.py  test_gnugo.py  test_mcts.py  test_puct.py
